# pahl

./: PROJECT_PLAN.md  README.md  deploy.sh  install_deps.sh  pyproject.toml
.github/workflows/: main.yml
agents/: summarization_agent.py  triage_agent.py
google_cloud/: main.py
google_cloud/aiohttp-3.12.12.dist-info/: RECORD
google_cloud/auth0_python-4.10.0.dist-info/: RECORD
google_cloud/build-1.2.2.post1.dist-info/: RECORD
google_cloud/cachecontrol-0.14.3.dist-info/: RECORD
google_cloud/chromadb-1.0.12.dist-info/: RECORD
google_cloud/coloredlogs-15.0.1.dist-info/: RECORD
google_cloud/crewai-0.126.0.dist-info/: RECORD
google_cloud/distro-1.9.0.dist-info/: RECORD
google_cloud/docstring_parser-0.16.dist-info/: RECORD
google_cloud/fastapi-0.115.9.dist-info/: RECORD
google_cloud/google_api_python_client-2.172.0.dist-info/: RECORD
google_cloud/google_auth_oauthlib-1.2.2.dist-info/: RECORD
google_cloud/google_cloud_firestore-2.21.0.dist-info/: RECORD
google_cloud/google_crc32c-1.7.1.dist-info/: RECORD
google_cloud/grpcio-1.73.0.dist-info/: RECORD
google_cloud/hf_xet-1.1.3.dist-info/: RECORD
google_cloud/huggingface_hub-0.32.6.dist-info/: RECORD
google_cloud/humanfriendly-10.0.dist-info/: RECORD
google_cloud/instructor-1.8.3.dist-info/: RECORD
google_cloud/ipython-9.3.0.dist-info/: RECORD
google_cloud/jiter-0.8.2.dist-info/: RECORD
google_cloud/json5-0.12.0.dist-info/: RECORD
google_cloud/json_repair-0.46.2.dist-info/: RECORD
google_cloud/jsonpickle-4.1.1.dist-info/: RECORD
slack_app/: app.py
tests/slack_app/: test_app.py  (+1 more)
(+28 files in other folders)
